RESOLVED FIXED52800
REGRESSION: Inset shadow with too large border radius misses rounded corner.
https://bugs.webkit.org/show_bug.cgi?id=52800
Summary REGRESSION: Inset shadow with too large border radius misses rounded corner.
Hajime Morrita
Reported 2011-01-20 04:44:14 PST
If width - border radius - border width goes negative, the shadow misses rounded corner. Only happens on ToT so http://trac.webkit.org/changeset/76083 has this regression. I'll post the fix in a few days.
Attachments
a repro. (444 bytes, text/html)
2011-01-20 22:19 PST, Hajime Morrita
no flags
Patch (24.55 KB, patch)
2011-01-23 21:05 PST, Hajime Morrita
eric: review+
Hajime Morrita
Comment 1 2011-01-20 22:19:52 PST
Created attachment 79696 [details] a repro.
Hajime Morrita
Comment 2 2011-01-23 21:05:49 PST
Hajime Morrita
Comment 3 2011-01-23 21:07:42 PST
Simon, Mitz, could you take a look at this? It should be a kind of obvious....
Hajime Morrita
Comment 4 2011-01-26 17:08:17 PST
Ping. Simon? I'd like to fix this regression soon because this actually breaks things... (In reply to comment #3) > Simon, Mitz, could you take a look at this? It should be a kind of obvious....
Eric Seidel (no email)
Comment 5 2011-01-30 05:13:45 PST
Comment on attachment 79888 [details] Patch Looks sane to me.
Hajime Morrita
Comment 6 2011-01-30 20:24:03 PST
Hajime Morrita
Comment 7 2011-01-30 20:24:53 PST
Landedl. Thanks Eric!
Note You need to log in before you can comment on or make changes to this bug.